Fixed Work Post image and horizontal scroll issue

--- a/app/src/styles/views/blog.scss
+++ b/app/src/styles/views/blog.scss
@@ -1,5 +1,6 @@
 .--blog .main-content {
-  overflow: visible;
+  padding-bottom: 150px;
+  overflow: hidden;
 }
 
 .blog {
@@ -358,7 +359,7 @@
   }
 
   @include breakpoint(small down) {
-    transform-origin: 20% top;
+    transform-origin: 28% top;
   }
 
   &.fade-out {
@@ -366,16 +367,16 @@
   }
 
   &.scale {
-    transform: scale(1.43);
+    transform: scale(1.4);
     opacity: 1;
     z-index: 1;
 
     @media screen and (max-width: 768px) {
-      transform: scale(1.025) translateX(25%);
+      transform: scale(1.23);
     }
 
     @include breakpoint(small down) {
-      transform: scale(1.4);
+      transform: scale(1.565);
     }
   }
 }
